			ROX-Session
			A very simple session manager
			by Thomas Leonard

TODO: Update configure as for ROX-Filer (changequote, etc)
      Get sawfish's iconize animation to go into the middle of the screen
      so people stop blaming us for hiding the icons under the panel...

29-Jan-2001
~~~~~~~~~~~
Removed session support, after realising that, despite its insane levels of
complexity, it doesn't actually support what I want (confirmation of logout)!

18-Oct-2001
~~~~~~~~~~~
Started adding session management support.

04-Oct-2001
~~~~~~~~~~~
Added IceWM to the default list of window managers (Bernard Jungen).

28-Jul-2001
~~~~~~~~~~~
Added WindowMaker to the default list of window managers (Terol Jose).

16-May-2001
~~~~~~~~~~~
Moved to new AppInfo.xml system.

23-Mar-2001 (Release 0.1.12)
~~~~~~~~~~~
When the window manager quits, the choice box defaults to the last used
command (so it's easy to restart the same program).

18-Mar-2001
~~~~~~~~~~~
When first loaded, ROX-Session will ask you which window manager you want
to use. If the window manager you run dies (or is quit), ROX-Session will
ask again.
Errors from child processes are copied to standard error, as well as being
displayed in the log window.

13-Mar-2001
~~~~~~~~~~~
'which' doesn't work on some systems. Try using 'twm' even if we think we
can't find it (Stephen Watson).

10-Mar-2001 (Release 0.1.11)
~~~~~~~~~~~
ROX-Session will now compile automatically the first time it is run.

09-Mar-2001
~~~~~~~~~~~
The default login script now runs everything it finds in
`Choices/ROX-Session/AutoStart'. Symlink your applications into here to
get them starting automatically!

Added an AppMenu with 'Auto start...' which creates and opens the user's
AutoStart directory.

13-Jan-2001
~~~~~~~~~~~
Bugfix: A extra copy of the error pipe was being passed to child processes,
	wasting one FD.

10-Jan-2001
~~~~~~~~~~~
Now traps standard error output and displays it overlayed on the
desktop.

01-Jan-2001
~~~~~~~~~~~