@@ -3,7 +3,7 @@
 PROG=ROX-Session
 
 APP_DIR=`dirname $0`
-APP_DIR=`cd $APP_DIR;pwd`; export APP_DIR
+APP_DIR=`cd "$APP_DIR";pwd`; export APP_DIR
 
 ARCH=`uname -m`
 case $ARCH in
@@ -19,7 +19,7 @@ case $1 in
 	--setup) exec $APP_DIR/Setup ;;
 	--compile)
 		shift
-		if [ ! -d $APP_DIR/src ] ; then
+		if [ ! -d "$APP_DIR/src" ] ; then
 			echo "ERROR from $0:" >&2
 			echo "Cannot compile - source code is missing!" >&2
 			exit 1
@@ -27,11 +27,12 @@ case $1 in
 		echo "Compiling $APP_DIR... please wait..." >&2
 		if [ ! -x "$APP_DIR/src/configure" ]; then
 		  echo "No 'configure' script! Trying to run autoconf..."
-		  (cd $APP_DIR/src; autoconf)
+		  (cd "$APP_DIR/src"; autoconf)
 		fi
-		rm -f $APP_DIR/src/config.cache
-		cd $APP_DIR/src && ./configure --bindir=$APP_DIR/$PLATFORM \
-			"$@" \
+		rm -f "$APP_DIR/src/config.cache"
+		cd "$APP_DIR/src" && ./configure --enable-rox	    \
+					--with-platform="$PLATFORM" \
+					"$@" \
 			&& make clean && make && echo Done >&2 && exit 0
 		echo Compile failed >&2
 		echo Press Return... >&2
@@ -39,21 +40,21 @@ case $1 in
 		exit 1
 esac
 
-BIN=$APP_DIR/$PLATFORM/$PROG
+BIN="$APP_DIR/$PLATFORM/$PROG"
 
-if [ -x $BIN ]; then
-  exec $DEBUGGER $BIN "$@"
+if [ -x "$BIN" ]; then
+  exec $DEBUGGER "$BIN" "$@"
 else
   echo "ERROR from $0:" >&2
   echo "I cannot find an executable file for your host type ($PLATFORM)." >&2
   echo "Trying to compile..." >&2
   if [ -n "$DISPLAY" ]; then
-    xterm -e $0 --compile
+    xterm -e "$0" --compile
   else
-    $0 --compile
+    "$0" --compile
   fi
-  if [ -x $BIN ]; then
-    exec $BIN "$@"
+  if [ -x "$BIN" ]; then
+    exec "$BIN" "$@"
   fi
   exit 1
 fi
