@@ -2,19 +2,33 @@ dnl Process this file with autoconf to produce a configure script.
 AC_INIT(main.c)
 AC_CONFIG_HEADER(config.h)
 
+AC_ARG_WITH(platform,
+[  --with-platform	  platform name, as detected by AppRun],
+[AC_SUBST(with_platform)],
+[
+AC_MSG_ERROR([
+
+Please do not run 'configure' manually - instead, run the AppRun script with
+the --compile option, like this:
+	$ ROX-Session/AppRun --compile
+
+Thank you.
+])
+])
+
 dnl Checks for programs.
 AC_PROG_CC
 AC_PROG_MAKE_SET
 
 dnl Use -Wall if possible
-changequote(,)dnl
+[
 if test "x$GCC" = "xyes"; then
   case " $CFLAGS " in
   *[\ \	]-Wall[\ \	]*) ;;
   *) CFLAGS="$CFLAGS -Wall" ;;
   esac
 fi
-changequote([,])dnl
+]
 
 dnl Checks for header files.
 AC_PATH_X
