@@ -2,14 +2,15 @@
 			A very simple session manager
 			by Thomas Leonard
 
-TODO: Update configure as for ROX-Filer (changequote, etc)
-      Get sawfish's iconize animation to go into the middle of the screen
+TODO: Get sawfish's iconize animation to go into the middle of the screen
       so people stop blaming us for hiding the icons under the panel...
 
 29-Jan-2001
 ~~~~~~~~~~~
 Removed session support, after realising that, despite its insane levels of
 complexity, it doesn't actually support what I want (confirmation of logout)!
+Updated configure.in for new autoconf (Richard Boulton).
+Put in lots of quotes to cope with spaces in filenames.
 
 18-Oct-2001
 ~~~~~~~~~~~
